--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "nodemailer": "^6.9.9",
     "path": "^0.12.7"
